--- a/app/src/main/res/layout/fragment_user_registration.xml
+++ b/app/src/main/res/layout/fragment_user_registration.xml
@@ -192,10 +192,12 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/bt_submit"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:text="Enviar"
+        android:layout_marginEnd="16dp"
+        android:text="Salvar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_email" />
