--- a/app/src/main/res/layout/fragment_user_registration.xml
+++ b/app/src/main/res/layout/fragment_user_registration.xml
@@ -26,13 +26,13 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:layout_marginTop="16dp"
-                android:src="@drawable/ic_launcher_background"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />
+                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
+                tools:src="@tools:sample/avatars" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/appCompatButton"
@@ -238,4 +238,5 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
+
 </androidx.appcompat.widget.LinearLayoutCompat>
