--- a/app/src/main/res/layout/fragment_user_registration.xml
+++ b/app/src/main/res/layout/fragment_user_registration.xml
@@ -167,12 +167,12 @@
             </RadioGroup>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tv_cpf"
+                android:id="@+id/text_input_cpf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:hint="cpf"
+                tools:hint="cpf"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/radioGroup">
@@ -194,7 +194,7 @@
                 android:hint="Data nascimento"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_cpf">
+                app:layout_constraintTop_toBottomOf="@+id/text_input_cpf">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
