--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -9,7 +9,7 @@
         android:id="@+id/error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Aconteceu algum problema :("
+        android:text="@string/algo_deu_errado"
         app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
         android:id="@+id/text_input_sexo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Pesquise aqui"
+        android:hint="@string/pesquise_aqui"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
