--- a/app/src/main/res/layout/fragment_user_registration.xml
+++ b/app/src/main/res/layout/fragment_user_registration.xml
@@ -11,7 +11,7 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:visibility="gone"
-        android:text="Algo deu errado :("
+        android:text="@string/algo_deu_errado"
         android:layout_height="wrap_content"/>
 
     <ScrollView
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="Cadastrar Usuario"
+                android:text="@string/cadastrar_usuario"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +51,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="Selecionar Imagem"
+                android:text="@string/selecionar_imagem"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -63,7 +63,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:hint="Nome"
+                android:hint="@string/nome"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/appCompatButton">
@@ -82,7 +82,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:hint="Usuario"
+                android:hint="@string/usuario"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/input_name">
@@ -100,7 +100,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:hint="Senha"
+                android:hint="@string/senha"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_username">
@@ -170,13 +170,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
-                    android:text="Pessoa Física" />
+                    android:text="@string/pessoa_f_sica" />
 
                 <RadioButton
                     android:id="@+id/radioPessoaJuridica"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Pessoa Jurídica" />
+                    android:text="@string/pessoa_jur_dica" />
 
             </RadioGroup>
 
@@ -246,7 +246,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="24dp"
-                android:text="Salvar"
+                android:text="@string/salvar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
